fixed issues on mobile with questions too small

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,11 @@ header p {
         text-align: center;
     }
 
+    .questions h1 {
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+
     .quizdone {
         margin-left: -175px;
         width: 300px;
